--- a/Modéle de boite/index.html
+++ b/Modéle de boite/index.html
@@ -5,14 +5,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>modéle de boite</h1>
+<h1>modéle de boite</h1> 
+<p>This is a simple paragraph of text.</p>
 <ul>
     <li>Border</li>
     <li>Width</li>
     <li>height</li>
 </ul>
-
-
-
 </body>
 </html>
